# audio_common

./: .hgignore  LICENSE  README.md  rosdep.yaml  stack.xml
.github/: labeler.yml
.github/workflows/: labeler.yml  main.yml  ros2.yml
audio_capture/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
audio_capture/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
audio_capture/install/audio_capture/lib/audio_capture/: audio_capture
audio_capture/install/audio_capture/share/ament_index/resource_index/package_run_dependencies/: audio_capture
audio_capture/install/audio_capture/share/ament_index/resource_index/parent_prefix_path/: audio_capture
audio_capture/install/audio_capture/share/audio_capture/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
audio_capture/install/audio_capture/share/audio_capture/cmake/: audio_captureConfig-version.cmake  audio_captureConfig.cmake
audio_capture/install/audio_capture/share/audio_capture/launch/: capture_to_file.launch.xml
audio_capture/launch/: capture.launch  capture.launch.py  capture.launch.xml  capture_to_file.launch  capture_to_file.launch.py  capture_to_file.launch.xml  capture_udp.launch  capture_wave.launch  capture_wave.launch.py  capture_wave.launch.xml
audio_capture/log/: latest_build
audio_capture/scripts/: audio_capture.py
audio_capture/src/: audio_capture.cpp  audio_capture_node.cpp  audio_server.cpp
audio_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
audio_common_msgs/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
audio_common_msgs/msg/: AudioDataStamped.msg  AudioInfo.msg  CompressedAudioData.msg  Mp3Data.msg  WaveData.msg
audio_msgs/: mainpage.dox  manifest.xml
audio_play/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
audio_play/launch/: play.launch  play.launch.py  play.launch.xml  record_to_file.launch
audio_play/src/: audio_play.cpp  audio_play_node.cpp  audio_stream.cpp
audio_process/: CMakeLists.txt  package.xml
audio_process/launch/: process.launch
audio_process/scripts/: view.py
audio_process/src/: audio_process.cpp
audio_to_float/: CHANGELOG.rst  CMakeLists.txt  package.xml
audio_to_float/launch/: audio_to_float.launch  spectrogram.launch
audio_to_float/scripts/: spectrogram.py  view.py
audio_to_float/src/: audio_to_float.cpp
audio_transport/launch/: client.launch  server.launch
audio_transport/src/: audio_client.cpp
float_to_audio/: CMakeLists.txt  package.xml
float_to_audio/config/: float_to_audio.perspective
float_to_audio/launch/: audio_to_float_to_audio.launch  float_to_audio.launch
float_to_audio/scripts/: gen_float.py  mixer.py  noise.py  sample.py
float_to_audio/src/: float_to_audio.cpp
sound_play/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py  sound_play_plugin.yaml  soundplay_node.launch
sound_play/include/sound_play/: sound_play.h
sound_play/launch/: soundplay_node.launch.xml
sound_play/msg/: SoundRequest.msg
sound_play/resources/flitevox/: .gitignore
sound_play/scripts/: is_speaking.py  is_speeching.py  play.py  playbuiltin.py  playpackage.py  say.py  shutup.py  soundclient_example.py  soundplay_node.py  test.py  test_actionlib_client.py
sound_play/sound_play/: __init__.py  libsoundplay.py
sound_play/src/sound_play/: __init__.py  festival_plugin.py  flite_plugin.py  libsoundplay.py  sound_play_plugin.py  sound_type.py
sound_play/test/: CMakeLists.txt  test.cpp
sound_play_msgs/: CMakeLists.txt  package.xml
sound_play_msgs/action/: SoundRequest.action
