<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
   <name>audio_common_msgs</name>
   <version>0.3.12</version>
   <description>
      Messages for transmitting audio via ROS
   </description>
   <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
   <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
   <author>Nate Koenig</author>
   <license>BSD</license>
   <url type="website">http://ros.org/wiki/audio_common_msgs</url>
   <url type="repository">https://github.com/ros-drivers/audio_common</url>
   <url type="bugtracker">https://github.com/ros-drivers/audio_common/issues</url>

   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>

   <depend>std_msgs</depend>

   <exec_depend>rosidl_default_runtime</exec_depend>

   <member_of_group>rosidl_interface_packages</member_of_group>

   <export>
     <build_type>ament_cmake</build_type>
   </export>
</package>
