<package>
   <name>audio_play</name>
   <description>
      Outputs audio to a speaker from a source node.
   </description>
   <maintainer email="ahendrix@willowgarage.com">Austin Hendrix</maintainer>
   <author>Nate Koenig</author>
   <license>BSD</license>
   <url>http://ros.org/wiki/audio_play</url>

   <buildtool_depend>catkin</buildtool_depend>

   <build_depend>roscpp</build_depend>
   <duild_depend>audio_common_msgs</build_depend>
   <build_depend>libgstreamer0.10-dev</build_depend>
   <build_depend>libgstreamer-plugins-base0.10-dev</build_depend>

   <run_depend>roscpp</run_depend>
   <run_depend>audio_common_msgs</run_depend>
   <run_depend>libgstreamer0.10-0</run_depend>
   <run_depend>libgstreamer-plugins-base0.10-0</run_depend>
   <run_depend>gstreamer0.10-plugins-ugly</run_depend>
   <run_depend>gstreamer0.10-plugins-good</run_depend>

</package>


