<package>
   <name>audio_to_float</name>
   <version>0.2.7</version>
   <description>
      Converts a stream of gstreamer AudioData messages to a stream of floating point arrays.
   </description>
   <maintainer email="wsacul@gmail.com">Lucas Walter</maintainer>
   <author>Lucas Walter</author>
   <license>BSD</license>
   <url type="website">http://ros.org/wiki/audio_play</url>
   <url type="repository">https://github.com/ros-drivers/audio_common</url>
   <url type="bugtracker">https://github.com/ros-drivers/audio_common/issues</url>

   <buildtool_depend>catkin</buildtool_depend>

   <build_depend>cv_bridge</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>audio_common_msgs</build_depend>
   <build_depend>libgstreamer1.0-dev</build_depend>
   <build_depend>libgstreamer-plugins-base1.0-dev</build_depend>

   <run_depend>cv_bridge</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>audio_common_msgs</run_depend>
   <run_depend>libgstreamer1.0-0</run_depend>
   <run_depend>libgstreamer-plugins-base1.0-0</run_depend>
   <run_depend>gstreamer1.0-plugins-ugly</run_depend>
   <run_depend>gstreamer1.0-plugins-good</run_depend>

</package>


