<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
   <name>sound_play_msgs</name>
   <version>0.3.12</version>
   <description>
      sound_play_msgs provides the interface for sound_play.
      sound_play provides a ROS node that translates commands on a ROS topic (<tt>robotsound</tt>) into sounds. The node supports built-in sounds, playing OGG/WAV files, and doing speech synthesis via festival. C++ and Python bindings allow this node to be used without understanding the details of the message format, allowing faster development and resilience to message format changes.
   </description>
   <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
   <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
   <author>Blaise Gassend</author>
   <license>BSD</license>
   <url type="website">http://ros.org/wiki/sound_play</url>
   <url type="repository">https://github.com/ros-drivers/audio_common</url>
   <url type="bugtracker">https://github.com/ros-drivers/audio_common/issues</url>

   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>

   <depend>builtin_interfaces</depend>

   <exec_depend>rosidl_default_runtime</exec_depend>

   <member_of_group>rosidl_interface_packages</member_of_group>

   <export>
      <build_type>ament_cmake</build_type>
   </export>

</package>
